Rewrite in typescript Add build step to transpile back to js

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,11 +8,11 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 # Use tabs in JavaScript and JSON.
-[**.{js, json}]
+[**.{js,ts,json}]
 indent_style = tab
 indent_size = 4
 
 # Use spaces in YAML.
 [**.{yml,yaml}]
-indent_style = spaces
+indent_style = space
 indent_size = 2
