--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "flightradar24-client",
 	"description": "Fetch aircraft data from Flightradar24.",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"type": "module",
-	"main": "index.js",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"files": [
-		"index.js",
-		"lib"
+		"dist"
 	],
 	"keywords": [
 		"aviation",
@@ -16,7 +16,8 @@
 	],
 	"author": "Jannis R <mail@jannisr.de>",
 	"contributors": [
-		"@E3V3A"
+		"@E3V3A",
+		"Pascal Syma <pascal@syma.dev> (https://syma.dev/)"
 	],
 	"homepage": "https://github.com/derhuerst/flightradar24-client",
 	"repository": "derhuerst/flightradar24-client",
@@ -31,13 +32,18 @@
 		"parse-jsonp": "^2.0.0"
 	},
 	"devDependencies": {
+		"@tsconfig/node18": "^18.2.2",
+		"@types/node": "^20.9.0",
 		"eslint": "^8.44.0",
+		"rimraf": "^5.0.5",
 		"tap-min": "^3.0.0",
-		"tape": "^5.6.4"
+		"tape": "^5.6.4",
+		"typescript": "^5.2.2"
 	},
 	"scripts": {
 		"lint": "eslint .",
 		"test": "node test.js | tap-min",
-		"prepublishOnly": "npm run lint && npm test"
+		"prepublishOnly": "npm run build && npm run lint && npm test",
+		"build": "rimraf dist && tsc"
 	}
 }
