--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "flightradar24-client",
+	"name": "@puazzi/flightradar24-client",
 	"description": "Fetch aircraft data from Flightradar24.",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"type": "module",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -19,12 +19,19 @@
 		"@E3V3A",
 		"Pascal Syma <pascal@syma.dev> (https://syma.dev/)"
 	],
-	"homepage": "https://github.com/derhuerst/flightradar24-client",
-	"repository": "derhuerst/flightradar24-client",
-	"bugs": "https://github.com/derhuerst/flightradar24-client/issues",
+	"homepage": "https://github.com/PassiDel/flightradar24-client",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/PassiDel/flightradar24-client.git"
+	},
+	"bugs": "https://github.com/PassiDel/flightradar24-client/issues",
 	"license": "ISC",
 	"engines": {
 		"node": ">=18"
+	},
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org",
+		"access": "public"
 	},
 	"dependencies": {
 		"fetch-ponyfill": "^7.1.0",
